<resources>
    <string name="app_name">SolucionLab10</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="episodes">Episodes:</string>
    <string name="characters">Characters</string>
    <string name="character_detail">Character Detail</string>
    <string name="error_fetching">Error al llamar al API</string>
    <string name="error_email_password">Correo o contraseña incorrecta</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="my_email">est21405@uvg.edu.gt</string>
    <string name="ParaTools">Personaje Juanito</string>
    <string name="nameLoadCharacter">Name</string>
    <string name="Load">Guardar</string>
    <string name="speciesLoadCharacter">Species</string>
    <string name="statusLoadCharacter">Status</string>
    <string name="genderLoadCharacter">Gender</string>
    <string name="originLoadCharacter">Origin</string>
    <string name="episodesLoadCharacter">Episodes</string>
</resources>